# cwipc_kinect

./: .gitlab-ci.yml  CMakeLists.txt  readme.md
apps/cwipc_k4aoffline/: CMakeLists.txt  cwipc_k4aoffline.cpp
apps/cwipc_k4aoffline_check/: CMakeLists.txt  cwipc_k4aoffline_check.cpp
apps/cwipc_k4aplayback/: CMakeLists.txt  cwipc_k4aplayback.cpp
apps/cwipc_k4aplayback_check/: CMakeLists.txt  cwipc_k4aplayback_check.cpp
apps/cwipc_kgrab/: CMakeLists.txt  cwipc_kgrab.cpp
apps/cwipc_kinect_grab/: CMakeLists.txt  cwipc_kinect_grab.cpp
apps/cwipc_kinect_install_check/: CMakeLists.txt  cwipc_kinect_install_check.cpp
apps/cwipc_kinect_playback/: CMakeLists.txt  cwipc_kinect_playback.cpp
apps/cwipc_kinect_playback_check/: CMakeLists.txt  cwipc_kinect_playback_check.cpp
apps/cwipc_kinect_playback_grab/: CMakeLists.txt  cwipc_kinect_playback_grab.cpp
apps/cwipc_kmultigrab/: CMakeLists.txt  cwipc_kmultigrab.cpp
apps/cwipc_krenderer/: CMakeLists.txt  cwipc_krenderer.cpp  cwipc_renderer.cpp
include/cwipc_kinect/: K4ACamera.hpp  K4ACapture.hpp  K4AOffline.hpp  K4AOfflineCamera.hpp  K4AOfflineCapture.hpp  api.h  defs.h  k4ACapture.hpp  multiFrame.hpp  utils.h
include/cwipc_kinect/private/: K4ACamera.hpp  K4ACapture.hpp  K4AConfig.hpp  K4AOfflineCamera.hpp  K4AOfflineCapture.hpp  defs.h  utils.h
python/: CMakeLists.txt  pyproject.toml  setup.py  test_cwipc_kinect.py
python/_cwipc_kinect/: __init__.py
python/_cwipc_kinect/scripts/cwipc_kinectcalibrate/: __main__.py  calibrator.py  cameraconfig.py  filegrabber.py  livegrabber.py
src/: CMakeLists.txt  K4ABaseCamera.cpp  K4ABaseCamera.hpp  K4ABaseCapture.hpp  K4ACamera.cpp  K4ACamera.hpp  K4ACapture.cpp  K4ACapture.hpp  K4AConfig.cpp  K4AConfig.hpp  K4AOffline.cpp  K4AOfflineCamera.cpp  K4AOfflineCamera.hpp  K4AOfflineCapture.cpp  K4AOfflineCapture.hpp  K4APlaybackCamera.cpp  K4APlaybackCamera.hpp  K4APlaybackCapture.cpp  K4APlaybackCapture.hpp  MFCamera.cpp  MFCapture.cpp  MFOffline.cpp  MFOfflineCamera.cpp  cwipc_kinect.cpp  k4ACapture.cpp  multiFrame.cpp  utils.cpp
tests/: CMakeLists.txt
tests/fixtures/input/kinect_recording/: cameraconfig.json  output_sub_1.mkv
tests/fixtures/input/recording/: cameraconfig.json  cameraconfig.xml  output_master.mkv
